# meeting-assistant

./: .env.example  .gitignore  README.md
RepoOnboarding/Architecture/: architecture.md
RepoOnboarding/Progress/: learning-path.md  progress.md
docs/plans/: 2026-06-10-deepseek-llm-client-design.md  2026-06-10-deepseek-llm-client.md  2026-06-11-video-upload-support-design.md  2026-06-11-video-upload-support.md  2026-06-12-human-in-the-loop-design.md  2026-06-12-human-in-the-loop-plan.md
docs/superpowers/plans/: 2026-06-14-dual-audio-capture-plan.md  2026-06-14-realtime-meeting-assistant-plan.md  2026-06-16-database-persistence-plan.md
docs/superpowers/specs/: 2026-06-14-dual-audio-capture-design.md  2026-06-14-realtime-meeting-assistant-design.md  2026-06-16-database-persistence-design.md
python/: pyproject.toml
python/frontend/: index.html  package-lock.json  package.json  vite.config.ts
python/frontend/src/: App.vue  main.ts
python/frontend/src/components/: ActionsPanel.vue  InsightsPanel.vue  SummaryPanel.vue  TranscriptPanel.vue
python/frontend/src/composables/: useLiveSession.ts
python/frontend/src/shared/: api.ts  types.ts
python/frontend/src/views/: HistoryView.vue  LiveMeetingView.vue  ReportView.vue  UploadView.vue
python/src/agents/: action_agent.py  insight_agent.py  summary_agent.py  transcription_agent.py
python/src/db/: __init__.py  models.py  repository.py
python/src/graph/: meeting_graph.py
python/src/integrations/: __init__.py  deepseek_client.py  feishu_client.py  jira_client.py  llm_client.py
python/src/models/: __init__.py  schemas.py
python/src/realtime/: __init__.py  audio_buffer.py  chunk_transcriber.py  incremental_analyzer.py  session_manager.py
python/src/tests/: test_audio_buffer.py  test_incremental_analyzer.py  test_live_session.py
python/src/utils/: __init__.py  media_utils.py
python/src/websocket/: server.py
python/static/: index.html
python/static/assets/: HistoryView-BkG6UQQ9.js  HistoryView-ClOoK8Wh.js  HistoryView-FARFprfc.js  HistoryView-pJw9tAmu.js  InsightsPanel-C8kzU7zl.js  InsightsPanel-Ce_Ift0W.js  InsightsPanel-CnPE8SqJ.js  LiveMeetingView-B8Ttt9be.js  LiveMeetingView-CpEPmvfY.js  LiveMeetingView-CtHGhmSg.js  LiveMeetingView-DK8xW3Fv.css  LiveMeetingView-DsKDs9-S.css  ReportView-BlyzoDF5.js  ReportView-C1BtKAm0.js  ReportView-DaC0g1qW.js  ReportView-Dl5MDdmp.js  UploadView-CEe1voIK.js  UploadView-CQPCi9JA.js  UploadView-Cy2p7Grw.js  UploadView-wbQHlze6.js  api-B5GcLWhP.js  api-D-tpFuOt.js  index-BCq-IK61.js  index-BrYJCoK5.js  index-CI7nn6s3.js  index-CmLyM19d.js
python/tests/: conftest.py  test_human_in_loop.py  test_media_utils.py  test_video_upload.py
reproduce/: .env.example  docker-compose.yml  requirements.txt  实现计划.md
reproduce/demos/: run_phase1.py  run_phase2.py  run_phase3.py  run_phase4.py  run_phase5.py
reproduce/src/: __init__.py  main.py
reproduce/src/agents/: __init__.py  action_agent.py  followup_agent.py  insight_agent.py  summary_agent.py  transcription_agent.py
reproduce/src/graph/: __init__.py  meeting_graph.py
reproduce/src/integrations/: __init__.py  feishu_client.py  jira_client.py  minimax_client.py
reproduce/src/models/: __init__.py  schemas.py
reproduce/src/tests/: __init__.py
reproduce/src/websocket/: __init__.py  server.py
