[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meeting-assistant"
version = "1.0.0"
description = "企业级多Agent智能会议助手系统"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Contributors", email = "contributors@example.com" },
]
keywords = ["agent", "meeting", "langgraph", "ai", "multi-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # === Agent Framework ===
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    # === LLM Providers ===
    "openai>=1.50.0",
    "httpx>=0.27.0",
    # === Web Framework ===
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "websockets>=13.0",
    "python-multipart>=0.0.12",
    # === External Integrations ===
    "jira>=3.8.0",
    "requests>=2.32.0",
    # === Database ===
    "sqlalchemy>=2.0.0",
    "sqlmodel>=0.0.22",
    "asyncpg>=0.30.0",
    "chromadb>=0.5.0",
    "redis>=5.2.0",
    # === Data Processing ===
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "numpy>=1.26.0",
    # === Utilities ===
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",
    "tenacity>=9.0.0",
    "apscheduler>=3.10.0",
    # === Static Files ===
    "aiofiles>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
]
all = [
    "whisperx>=3.1",
    "faster-whisper>=1.0",
    "pyannote.audio>=3.3",
    "jira>=3.8",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
